--- a/BingTranslator/test-output/old/Default suite/classes.html
+++ b/BingTranslator/test-output/old/Default suite/classes.html
@@ -15,11 +15,27 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
+<td>cleanButtonFunctionality</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>whetherBoxIsNonEditable</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>swapButtonFuctionality</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>autoDetecting</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>moreThan5000Characters</td>
+<td>dropdownPresentAndExpandablre</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>whetherBoxIsEditable</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
