--- a/BingTranslator/test-output/old/Default suite/methods-alphabetical.html
+++ b/BingTranslator/test-output/old/Default suite/methods-alphabetical.html
@@ -1,18 +1,34 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e6e9c3">  <td>18/07/02 15:48:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestBingTranslator.autoDetecting()[pri:0, instance:TestTranslation.TestBingTranslator@5e3a8624]">autoDetecting</td> 
+<tr bgcolor="e6e9c3">  <td>18/07/03 15:51:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestBingTranslator.autoDetecting()[pri:0, instance:TestTranslation.TestBingTranslator@5e3a8624]">autoDetecting</td> 
   <td>main@1007653873</td>   <td></td> </tr>
-<tr bgcolor="e6e9c3">  <td>18/07/02 15:47:55</td>   <td>-6444</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBingTranslator.beforeClass()[pri:0, instance:TestTranslation.TestBingTranslator@5e3a8624]">&gt;&gt;beforeClass</td> 
+<tr bgcolor="e6e9c3">  <td>18/07/03 15:51:28</td>   <td>-7092</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBingTranslator.beforeClass()[pri:0, instance:TestTranslation.TestBingTranslator@5e3a8624]">&gt;&gt;beforeClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1007653873</td>   <td></td> </tr>
-<tr bgcolor="e6e9c3">  <td>18/07/02 15:48:00</td>   <td>-1647</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBingTranslator.beforeMethod()[pri:0, instance:TestTranslation.TestBingTranslator@5e3a8624]">&gt;&gt;beforeMethod</td> 
+<tr bgcolor="e6e9c3">  <td>18/07/03 15:51:34</td>   <td>-627</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBingTranslator.beforeMethod()[pri:0, instance:TestTranslation.TestBingTranslator@5e3a8624]">&gt;&gt;beforeMethod</td> 
 <td>&nbsp;</td>  <td>main@1007653873</td>   <td></td> </tr>
-<tr bgcolor="e6e9c3">  <td>18/07/02 15:48:07</td>   <td>5278</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBingTranslator.beforeMethod()[pri:0, instance:TestTranslation.TestBingTranslator@5e3a8624]">&gt;&gt;beforeMethod</td> 
+<tr bgcolor="e6e9c3">  <td>18/07/03 15:51:38</td>   <td>3226</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBingTranslator.beforeMethod()[pri:0, instance:TestTranslation.TestBingTranslator@5e3a8624]">&gt;&gt;beforeMethod</td> 
 <td>&nbsp;</td>  <td>main@1007653873</td>   <td></td> </tr>
-<tr bgcolor="e6e9c3">  <td>18/07/02 15:49:02</td>   <td>60453</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBingTranslator.beforeMethod()[pri:0, instance:TestTranslation.TestBingTranslator@5e3a8624]">&gt;&gt;beforeMethod</td> 
+<tr bgcolor="e6e9c3">  <td>18/07/03 15:51:41</td>   <td>5850</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBingTranslator.beforeMethod()[pri:0, instance:TestTranslation.TestBingTranslator@5e3a8624]">&gt;&gt;beforeMethod</td> 
 <td>&nbsp;</td>  <td>main@1007653873</td>   <td></td> </tr>
-<tr bgcolor="e6e9c3">  <td>18/07/02 15:48:08</td>   <td>6649</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestBingTranslator.moreThan5000Characters()[pri:0, instance:TestTranslation.TestBingTranslator@5e3a8624]">moreThan5000Characters</td> 
+<tr bgcolor="e6e9c3">  <td>18/07/03 15:51:41</td>   <td>6426</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBingTranslator.beforeMethod()[pri:0, instance:TestTranslation.TestBingTranslator@5e3a8624]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1007653873</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>18/07/03 15:51:44</td>   <td>9131</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBingTranslator.beforeMethod()[pri:0, instance:TestTranslation.TestBingTranslator@5e3a8624]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1007653873</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>18/07/03 15:51:47</td>   <td>11832</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBingTranslator.beforeMethod()[pri:0, instance:TestTranslation.TestBingTranslator@5e3a8624]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1007653873</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>18/07/03 15:51:50</td>   <td>14858</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBingTranslator.beforeMethod()[pri:0, instance:TestTranslation.TestBingTranslator@5e3a8624]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1007653873</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>18/07/03 15:51:38</td>   <td>3766</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestBingTranslator.cleanButtonFunctionality()[pri:0, instance:TestTranslation.TestBingTranslator@5e3a8624]">cleanButtonFunctionality</td> 
   <td>main@1007653873</td>   <td></td> </tr>
-<tr bgcolor="e6e9c3">  <td>18/07/02 15:49:03</td>   <td>61351</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestBingTranslator.properTranslation()[pri:0, instance:TestTranslation.TestBingTranslator@5e3a8624]">properTranslation</td> 
+<tr bgcolor="e6e9c3">  <td>18/07/03 15:51:41</td>   <td>6403</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestBingTranslator.dropdownPresentAndExpandablre()[pri:0, instance:TestTranslation.TestBingTranslator@5e3a8624]">dropdownPresentAndExpandablre</td> 
+  <td>main@1007653873</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>18/07/03 15:51:50</td>   <td>15597</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestBingTranslator.properTranslation()[pri:0, instance:TestTranslation.TestBingTranslator@5e3a8624]">properTranslation</td> 
+  <td>main@1007653873</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>18/07/03 15:51:42</td>   <td>7045</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestBingTranslator.swapButtonFuctionality()[pri:0, instance:TestTranslation.TestBingTranslator@5e3a8624]">swapButtonFuctionality</td> 
+  <td>main@1007653873</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>18/07/03 15:51:44</td>   <td>9696</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestBingTranslator.whetherBoxIsEditable()[pri:0, instance:TestTranslation.TestBingTranslator@5e3a8624]">whetherBoxIsEditable</td> 
+  <td>main@1007653873</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>18/07/03 15:51:47</td>   <td>12766</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestBingTranslator.whetherBoxIsNonEditable()[pri:0, instance:TestTranslation.TestBingTranslator@5e3a8624]">whetherBoxIsNonEditable</td> 
   <td>main@1007653873</td>   <td></td> </tr>
 </table>
